# pashe

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  biome.json  bun.lockb  drizzle.config.ts  package.json  tsconfig.json
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: install-mold.sh
.github/: copilot-commit-message-instructions.md
.github/workflows/: ci.yaml  images.yaml
crates/db/: Cargo.toml
crates/db/src/: cli.rs  db.rs  error.rs  lib.rs  main.rs  migration.rs
crates/db/tests/: integration_test.rs
crates/pashe-backend/: Cargo.toml
crates/pashe-backend/src/: main.rs
crates/pashe-backend/src/db/: client.rs  error.rs  mod.rs  schema.rs
crates/pashe-backend/src/poe/: authorization.rs  mod.rs  public_stash.rs  public_stash_worker.rs  rate_limit.rs  rate_limiting.rs  types.rs
crates/pashe-frontend/: package.json  vite.config.ts
crates/pashe-frontend/src/: app.css
crates/pashe-frontend/src-tauri/: Cargo.toml  tauri.conf.json
crates/pashe-frontend/src-tauri/src/: lib.rs  main.rs
crates/pashe-frontend/src/routes/: +page.svelte
crates/poe-indexer/: Cargo.toml
crates/poe-indexer/src/: main.rs
crates/poe-indexer/src/db/: mod.rs  schema.rs
crates/poe-indexer/src/poe/: public_stash.rs  rate_limiting.rs
docker/: docker-compose.yml  exemple.env
migrations/: 000001_initial.down.sql  000001_initial.up.sql
src/: auth-handler.ts  authHandler.ts  cache.rs  db.rs  index.ts  main.rs  test-query.ts
src/Api/: POE.ts  PublicStash.ts  RateLimit.ts
src/api/: ninja.ts  public-stash.ts  rate-limit.ts  types.ts
src/db/: db.ts  schema.rs  schema.ts
src/poe/: authorization.rs  constants.rs  mod.rs  public_stash.rs  rate_limiting.rs
