[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
rust-version = "1.88.0"
edition = "2024"
license = "GNU GPLv3"
authors = ["haellsigh@gmail.com"]
repository = "https://github.com/azais-corentin/pashe-backend"

[workspace.dependencies]
migrator = { path = "crates/migrator" }
poe-indexer = { path = "crates/poe-indexer" }

[workspace.lints.clippy]
