[workspace]
members = ["crates/db", "crates/pashe-backend"]
resolver = "3"

[workspace.package]
rust-version = "1.88.0"
edition = "2024"
license = "GNU GPLv3"
authors = ["haellsigh@gmail.com"]
repository = "https://github.com/azais-corentin/pashe-backend"

[workspace.dependencies]
db = { path = "crates/db" }
pashe-backend = { path = "crates/pashe-backend" }

[workspace.lints.clippy]
