[workspace]
members = [
    "crates/db",
    "crates/pashe-backend",
    "crates/pashe-frontend/src-tauri",
]
resolver = "3"

[profile.dev.package."pashe-frontend"]
debug = 0

[profile.release]
strip = true
lto = true

[workspace.package]
rust-version = "1.88.0"
edition = "2024"
license = "GNU GPLv3"
authors = ["haellsigh@gmail.com"]
repository = "https://github.com/azais-corentin/pashe-backend"

[workspace.lints.clippy]
