[package]
name = "db"
description = "Database management tool for Clickhouse"
version = "0.1.0"

repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
clickhouse = { version = "0.13.3", features = ["chrono", "inserter", "uuid"] }
dotenvy = "0.15.7"
futures = "0.3.31"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lints]
workspace = true

[dev-dependencies]
serial_test = "3.2.0"
testcontainers-modules = { version = "0.12.1", features = ["clickhouse"] }
