[package]
name = "pashe-backend"
version = "0.1.0"

repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.98"
async-compression = { version = "0.4.27", features = ["gzip", "tokio"] }
async-trait = "0.1.88"
chrono = "0.4.41"
clickhouse = { version = "0.13.3", features = ["chrono", "inserter", "uuid"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
http = "1.3.1"
human-repr = "1.1.0"
oauth2 = "5.0.0"
redis = { version = "0.32.4", features = ["tokio-comp"] }
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
reqwest-middleware = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_repr = "0.1.20"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
winnow = "0.7.12"
