[package]
name = "pashe-frontend"
version = "0.1.0"

repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "pashe_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
chrono = "0.4.41"
clickhouse = { version = "0.13.3", features = ["chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-opener = "2.4.0"
tokio = { version = "1.47.1", features = ["full"] }
